audio controler improvement

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@
 # For example:
 # RPi.GPIO>=0.7.0  # For Raspberry Pi GPIO control
 # gpiozero>=1.6.0  # Alternative GPIO library
+
+pyttsx3>=2.90  # Text-to-speech conversion library
