--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,6 @@ YOUTUBE_PLAYLIST_ID=
 # 4. Run: python setup_youtube_auth.py (authenticate once)
 # 5. Your .env is ready - token.json will be auto-generated
 # 6. Start your application!
+
+# Monitoring Settings (optional - defaults in settings.py)
+HEARTBEAT_INTERVAL=1.0      # Heartbeat write frequency (seconds)
